# IBM-Hackathon-Market-Pulse

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  example.env  openapi.json  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: deploy.yml
app/: config.py  database.py  main.py  models.py  skills.py
app/routers/: jobs.py  salaries.py
docs/: data-ingestion.md
front/market-pulse-ui/: README.md  index.html  package-lock.json  package.json
front/market-pulse-ui/src/: App.css  App.jsx
market_pulse/: __init__.py  cli.py  companies.py  roles.py
market_pulse/scripts/: __init__.py  collect_adzuna.py  collect_arbeitnow.py  collect_muse.py  ensure_cloudant_db.py  ensure_db.py  ensure_roles.py
scripts/: ingest_muse_jobs.py  ingest_salaries.py  normalize_adzuna.py
